@@ -3,6 +3,7 @@
  - The Python bindings for Qt6 use the "PyKDDockWidgetsQt6" namespace
  - Co-installable with Qt6
  - Adds support for non-detachable central widget, MainWindowOption_HasCentralWidget. (#225)
+ - Fix corrupt layout when restoring old JSON
 
 * v1.4.1 (unreleased)
  -
